# bellows

./: .gitattributes  .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  PRD.md  README.md  RESEARCH.md  agent-notes.md  orchestrator.example.toml
.github/workflows/: auto-merge.yml  ci.yml
docs/adr/: 0001-direct-vs-enable-auto-merge.md  0002-ssh-deploy-keys-for-private-cross-repo-deps.md  0003-pre-claim-stale-agent-branch-deletion.md  0004-bellows-gate-mirrors-target-ci.md  0005-multi-engine-support.md  0006-agent-notes-informational-vs-escalation.md  0007-blocked-by-issue-dependency-tracking.md  0008-opencode-as-third-engine.md  (+1 more)
policy-image/: CLAUDE.md  Dockerfile  entrypoint  entrypoint-user  run-agent  run-cargo-checks
src/: auth.rs  chain_walker.rs  config.rs  lib.rs  main.rs  main_helpers.rs  policy.rs  policy_image_gen.rs  runner.rs  sandbox.rs  status.rs  tracker.rs  triage.rs  workflow_parse.rs  workspace.rs
tests/: adr_agent_notes.rs  adr_force_with_lease.rs  adr_multi_engine.rs  auto_merge.rs  blocked_by_parser.rs  blocked_by_polling.rs  cache_volumes.rs  chain_walker.rs  ci.rs  ci_policy_image_build.rs  config.rs  engine.rs  engine_dispatch.rs  engine_opencode.rs  engine_opencode_auth_callout.rs  engine_opencode_classify.rs  engine_opencode_cooling.rs  engine_opencode_dispatch.rs  engine_opencode_dockerfile.rs  engine_opencode_integration.rs  engine_opencode_kickoff.rs  engine_opencode_policy_image_gen.rs  engine_opencode_readme_and_sample.rs  engine_opencode_refresh_auth.rs  engine_opencode_run_agent.rs  engine_opencode_setup_auth.rs  engine_opencode_signatures.rs  engine_opencode_strip_ansi.rs  merger.rs  policy.rs  policy_image_claude_md_stop_signal.rs  policy_image_claude_md_workspace_trust.rs  policy_image_engine_dispatch.rs  policy_merger_routing.rs  readme.rs  run_cargo_checks_script.rs  runner.rs  runner_container_gate.rs  slug.rs  tracker.rs  (+3 more)
(+2 files in other folders)
