[package]
name = "bellows"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std", "serde"] }
clap = { version = "4.6.1", features = ["derive"] }
octocrab = "0.50.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"

[dev-dependencies]
wiremock = "0.6.5"
