[package]
name = "bellows"
version = "0.1.0"
edition = "2024"
default-run = "bellows"

[dependencies]
anyhow = "1.0.102"
bollard = "0.21.0"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std", "serde"] }
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
libc = "0.2.186"
octocrab = "0.50.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = "0.1.18"
toml = "1.1.2"
uuid = { version = "1.23.1", features = ["v4"] }
yaml-rust2 = "0.11.0"

[dev-dependencies]
wiremock = "0.6.5"
